@@ -148,6 +148,7 @@ fixed bugs:
 - fixed bug in presolving while not applying a bound change on a variable in a single-variable constraint (e.g. x1 = 0.03) in cons_linear which is too small, that lead to another bound change in presol_trivial which is not allowed, so now this bound change will be forced
 - fixed  SCIPvarIsTransformedOrigvar() in var.c (variables generated by presol_inttobinary returned false)
 - fixed bug in heur_nlp.c: objective function had wrong sign for maximization problems
+- fixed potential bug in OCTANE heuristic with nonbasic solutions
 
 plugins:
 - added constraint handler for second order cone constraints (cons_soc.(c|h))
